<resources>
    <string name="app_name">Ourpage</string>
    <string name="email">ourpageapp@gmail.com</string>

    <!--공통-->
    <string name="send">전송</string>
    <string name="msg_input_email">이메일 주소를 입력해주세요.</string>
    <string name="err_not_sign_in_email">가입되지 않은 이메일입니다.</string>
    <string name="confirm">확인</string>
    <string name="delete">삭제</string>
    <string name="reading">읽는 중</string>
    <string name="read_complete">완독</string>
    <string name="want_to_read">읽고 싶은</string>
    <string name="go_post">기록 쓰러가기</string>
    <string name="cancel">취소</string>

    <!--토스트 메세지-->
    <string name="msg_post">작성이 완료되었습니다.</string>
    <string name="msg_password_resetting">비밀번호가 변경되었습니다.</string>
    <string name="msg_quit_membership">회원 탈퇴가 완료되었습니다. 그동안 Our page를 이용해주셔서 감사합니다.</string>
    <string name="msg_read_complete">책 완독을 취소했습니다.</string>
    <string name="msg_cancel_read_complete">첵을 완독하셨습니다!</string>
    <string name="msg_update_introduce">자기소개가 업데이트 되었습니다!</string>
    <string name="err_select_book">책을 선택해주세요.</string>
    <string name="err_input_title_content">제목과 내용을 입력해주세요.</string>
    <string name="err_change">변경 중 오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="err_post">작성 중 오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="err_quit_membership">회원 탈퇴 중 오류가 발생했습니다. 다시 시도해주세요.</string>
    <string name="err_login_fail_go_login">로그인 중 오류가 발생했습니다.\n로그인 화면으로 이동합니다.</string>
    <string name="err_login_fail">로그인 중 오류가 발생했습니다.\n다시 시도해 주세요.</string>

    <!--Dialog Fragment-->
    <string name="title_send_temp_password">임시 비밀번호가 발급되었습니다.</string>
    <string name="msg_send_temp_password">임시 비밀번호로 로그인 후 설정 - 비밀번호 재설정에\n들어가서 비밀번호 재설정 후 사용하시길 바랍니다.</string>
    <string name="title_delete_book">책을 삭제하시겠습니까?</string>
    <string name="msg_memo_list_all_delete">전체 메모 리스트도 함께 삭제됩니다.</string>
    <string name="title_delete_memo">메모를 삭제하시겠습니까?</string>
    <string name="msg_delete_memo">메모는 추후 복구가 불가능합니다.</string>
    <string name="title_change_about_me">자기소개 변경</string>
    <string name="msg_input_inside_20">20자 이내로 입력해주세요.</string>

    <!--Login Activity-->
    <string name="err_input_id_pw">이메일과 비밀번호를 작성하세요.</string>
    <string name="err_wrong_user">이메일과 비밀번호를 확인해주세요.</string>

    <!--SignIn Activity-->
    <string name="input_email">이메일 주소를 입력해 주세요.</string>
    <string name="msg_sign_in_agree">이용약관 및 개인정보처리방침에 동의합니다.</string>

    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="login">LOG IN</string>
    <string name="social_login">소셜 계정으로 로그인</string>
    <string name="sign_in">회원가입</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="signin_id_alert">사용할 수 없는 아이디 입니다.</string>
    <string name="signin_password_alert">사용할 수 없는 비밀번호 입니다. (6자~12자)</string>
    <string name="user_setting_desc">남겨주신 정보는 나의 소개로 북클럽원에게 들어갑니다.</string>
    <string name="book_profile_start_title">독서의 순간을 함께 기록하는\nOur page에 오신 것을 환영합니다!</string>
    <string name="book_profile_start_desc">독서 취향과 함께 당신을 소개해주세요.</string>
    <string name="select_profile_image">프로필 사진을 선택해주세요.</string>
    <string name="set_nickname_title">당신의 닉네임은?</string>
    <string name="set_gender_title">성별을 선택해주세요.</string>
    <string name="set_birth_title">생년월일을 입력해주세요.</string>
    <string name="year">년</string>
    <string name="month">월</string>
    <string name="day">일</string>
    <string name="man">남성</string>
    <string name="woman">여성</string>
    <string name="express_me_title">책 읽는 당신을 20자로 표현해 본다면?</string>
    <string name="express_me_hint">나는 책을 정말 좋아하는 사람입니다.</string>
    <string name="skip">건너뛰기</string>
    <string name="set_genre_title">좋아하는 장르를 자유롭게 선택해주세요.</string>
    <string name="reading_style_title">거의 다왔어요!\n당신의 독서 스타일은 어떤가요?</string>
    <string name="self_reading_style_hint">+ 나만의 스타일로 소개하기 (최대 20자)</string>
    <string name="reading_goal_title">마지막으로\n당신의 독서 목표를 알려주세요!</string>

    <!-- main activity -->
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="msg_ready_book_club">COMING SOON!\n다함께 책에 대한 이야기를 나눌 수 있는\n아워페이지 북클럽 서비스를 준비 중입니다.</string>

    <!-- navigation view -->
    <string name="add_book_club">북클럽 추가하기</string>

    <!-- bottom navigation -->
    <string name="main">main</string>
    <string name="library">library</string>
    <string name="bookclub">bookclub\n(준비중)</string>

    <!-- my library -->
    <string name="my_library">내 서재</string>
    <string name="other_club">other club</string>
    <string name="book_search">책 제목을 입력하세요.</string>
    <string name="book_club_kr">북클럽</string>
    <string name="latest_order">최신순</string>
    <string name="old_order">오래된순</string>
    <string name="name_order">이름순</string>
    <string name="like_order">좋아요순</string>

    <!-- clubs -->
    <string name="hot_memo">핫한 메모</string>
    <string name="hot_topic">핫한 토픽</string>
    <string name="gather_records">기록 모아보기</string>
    <string name="club_members">클럽원</string>

    <!-- my library, clubs -->
    <string name="search">검색</string>
    <string name="sort">정렬</string>

    <!-- create club -->
    <string name="create_club">북클럽 생성</string>
    <string name="club_name">클럽명</string>
    <string name="club_name_hint">클럽명을 입력해주세요</string>
    <string name="club_info">클럽 한줄 소개</string>
    <string name="club_info_hint">클럽 소개글을 입력해주세요</string>

    <!-- write init fragment -->
    <string name="checklist">CHECK LIST</string>
    <string name="write_checklist">눌러서 작성하세요.</string>
    <string name="msg_checklist_not_develop">아직 개발 중인 기능입니다.\n조금만 기다려주세요!</string>

    <!-- record fragment -->
    <string name="record_en">Record</string>
    <string name="posting">올리기</string>
    <string name="book_select">기록할 책을 선택해주세요</string>
    <string name="memo_en">MEMO</string>
    <string name="topic_en">TOPIC</string>
    <string name="title_hint">제목을 입력해주세요.</string>
    <string name="memo_topic_desc">*메모와 토픽 중 선택해주세요</string>

    <!-- select book fragment -->
    <string name="select_book">책 선택하기</string>
    <string name="enroll_new_book">새 책 등록하기</string>
    <string name="select_in_library">내 책장에서 선택하기</string>
    <string name="search_result">검색 결과</string>

    <!-- add book bottom sheet fragment -->
    <string name="book_option">책 옵션</string>
    <string name="add_book">책 추가하기</string>

    <!-- 갤러리 이미지 선택하기 화면 -->
    <string name="gallery_title">사진들</string>
    <string name="max_image_desc">이미지는 최대 4장까지 첨부할 수 있습니다.</string>

    <!-- record_scope_bottom_sheet -->
    <string name="record_kr">기록하기</string>

    <string name="complete">완료</string>
    <string name="next">다음</string>
    <string name="content_hint">내용을 입력해주세요.</string>
    <string name="set_nickname_info">특수문자, 한글, 영어 혼용 가능 (최대 10자)</string>

    <!--  Camera Gallery Bottom Sheet Fragment  -->
    <string name="photo_registration">사진 등록</string>
    <string name="take_a_photo">사진 촬영하기</string>
    <string name="get_to_gallery">사진첩에서 가져오기</string>

    <!-- WritingSettingFragment -->
    <string name="writing_setting">글 설정</string>
    <string name="read_where">어디서 책을 읽었나요?</string>
    <string name="read_where_hint">ex. 집 앞 카페에서</string>
    <string name="read_time">책 읽은 시간대는?</string>
    <string name="read_time_hint">ex. 점심시간에 30분</string>
    <string name="link">함께 첨부하고 싶은 링크가 있다면?</string>
    <string name="link_title_hint">링크 제목</string>
    <string name="link_hint">메모와 관련된 노래/영상/뉴스의 링크를 입력해보세요.</string>
    <string name="public_setting">공개 설정</string>

    <!-- PostDetailFragment -->
    <string name="update">수정하기</string>
    <string name="msg_input_location">책과 함께한 장소를 입력해보세요.</string>
    <string name="msg_input_time">책을 읽은 시간대를 입력해보세요.</string>
    <string name="msg_input_link">함께 기억하고 싶은 링크를 입력해보세요.</string>

    <!-- BookDescFragment -->
    <string name="end">END</string>
    <string name="memo_list">MEMO LIST</string>
    <string name="delete_book">책 삭제</string>
    <string name="title_activity_photo_view">PhotoViewActivity</string>

    <!-- SettingActivity -->
    <string name="setting">설정</string>
    <string name="version">버전 0.4.0</string>
    <string name="logout">로그아웃</string>
    <string name="quit_membership">계정 탈퇴하기</string>

    <!-- MyInfoActivity -->
    <string name="my_info">내 정보</string>
    <string name="favorite_genre">좋아하는 장르</string>
    <string name="reading_style">책 읽는 스타일</string>
    <string name="reading_routine">책 루틴</string>
    <string name="total_record">총 기록</string>
    <string name="total_reading_book">읽은 책</string>

    <!-- YourTasteActivity -->
    <string name="update_genre_title">좋아하는 장르를 수정해주세요.</string>
    <string name="update_reading_style">독서 스타일을 수정해주세요.</string>

    <!-- MyInfoActivity, YourTasteActivity -->
    <string name="your_taste">당신의 취향</string>

    <!-- MyInfoActivity, GoalManagementActivity -->
    <string name="goal_management">목표 관리</string>

    <!-- GoalManagementActivity -->
    <string name="update_reading_goal">독서 목표를 수정해주세요.</string>

    <!-- MyInfoActivity, ChecklistManagementActivity -->
    <string name="checklist_management">체크리스트 관리</string>

    <!-- SettingActivity, ResettingPasswordActivity -->
    <string name="resetting_password">비밀번호 변경</string>

    <!-- ResettingPasswordActivity -->
    <string name="old_password">기존 비밀번호</string>
    <string name="new_password">새로운 비밀번호</string>
    <string name="reenter_new_password">새로운 비밀번호 재입력</string>
    <string name="password_condition">영문, 숫자, 특수문자 중 2개 조합 10자 이상</string>

    <!-- SettingActivity, NoticeActivity -->
    <string name="notice">공지사항</string>

    <!-- SettingActivity, QuestionActivity -->
    <string name="question">1:1 문의 / 요청</string>

    <!-- QuestionActivity -->
    <string name="contact_us">Contact us</string>
    <string name="contact_desc">Our page 사용 중 문의사항이 있다면\n언제든지 편하게 문의해주세요!</string>
    <string name="send_email">이메일 보내기</string>

    <!-- SettingActivity, TermsConditionActivity -->
    <string name="terms_conditions">이용약관</string>

    <!-- TermsConditionActivity, TermsBottomSheetFragment -->
    <string name="terms_of_service">서비스 이용약관</string>
    <string name="privacy_policy">개인정보 처리 방침</string>
    <string name="receive_marketing_information">마케팅 정보 수신</string>

    <!-- TermsBottomSheetFragment -->
    <string name="terms_of_service_content">다른 어플보니 법적으로 공부를 하고 써야하는 부분인 거 같아 우선 노션에 가장 참고할만한 레퍼런스 찾아서 넣어뒀음\n\n주중으로 내용 초안 잡아서 공유할 예정\n나중에 자문받을 수 있으면 자문받는 게 좋을듯함 ,,</string>
    <string name="receive_marketing_information_content">개인정보보호법 제22조 제4항에 의해 선택정보 사항에 대해서는 기재하지 않으셔도 서비스를 이용할 수 있습니다.\n\n\t1. 마케팅 및 광고에의 활용\n\t\t▪신규 기능 개발 및 맞춤 서비스 제공\n\t\t▪뉴스레터 발송, 새로운 기능(제품)의 안내\n\t\t▪할인 및 쿠폰 등 이벤트 등 광고성 정보 제공\n\t\t▪이용자 맞춤형 상품 추천\n\n\t2. Our page 서비스를 운용함에 있어 각종 정보를 서비스 화면, SMS, 이메일 등의 방법으로 회원에게 제공할 수 있으며, 결제안내 등 의무적으로 안내되어야 하는 정보성 내용 및 일부 혜택성 정보는 수신동의 여부와 무관하게 제공합니다.</string>

    <!-- SettingActivity, OpenSourceActivity -->
    <string name="open_source_license">오픈소스 라이선스</string>

    <!-- EmailAuthenticationActivity -->
    <string name="email_authentication">이메일 인증</string>
    <string name="resend">재전송</string>
    <string name="msg_input_code">인증코드를 입력해주세요.</string>
    <string name="err_wrong_code">인증코드가 틀렸습니다.</string>

    <!--PasswordReissueActivity-->
    <string name="title_password_reissue">비밀번호 재발급</string>
    <string name="msg_password_reissue">회원가입 시 사용한 이메일로\n임시 비밀번호를 발급해 드릴게요!</string>

    <!--WithdrawalActivity-->
    <string name="msg_withdrawal">*회원 탈퇴 시 ID와 개인 정보, 기록이 삭제됩니다.</string>
    <string name="action_withdrawal">탈퇴하기</string>
</resources>