<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="22dp">

    <CheckBox
        android:id="@+id/latestOrder"
        android:layout_width="45dp"
        android:layout_height="19dp"
        android:background="@drawable/selector_filter2"
        android:button="@null"
        android:gravity="center"
        android:text="@string/latest_order"
        android:textColor="@drawable/state_checked_text_white_black"
        android:textSize="10dp" />

    <CheckBox
        android:id="@+id/oldOrder"
        android:layout_width="55dp"
        android:layout_height="19dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/selector_filter2"
        android:button="@null"
        android:gravity="center"
        android:text="@string/old_order"
        android:textColor="@drawable/state_checked_text_white_black"
        android:textSize="10dp" />

    <CheckBox
        android:id="@+id/nameOrder"
        android:layout_width="45dp"
        android:layout_height="19dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/selector_filter2"
        android:button="@null"
        android:gravity="center"
        android:text="@string/name_order"
        android:textColor="@drawable/state_checked_text_white_black"
        android:textSize="10dp" />

    <CheckBox
        android:id="@+id/like_order"
        android:layout_width="66dp"
        android:layout_height="25.2dp"
        android:layout_marginLeft="6dp"
        android:background="@drawable/selector_filter2"
        android:button="@null"
        android:gravity="center"
        android:paddingTop="2.4dp"
        android:text="@string/like_order"
        android:textColor="@drawable/state_checked_text_white_black"
        android:textSize="14.4dp"
        android:visibility="gone" />

</LinearLayout>