<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.write.AddBookBottomSheetFragment">

    <TextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="19dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/book_option"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/readTypeRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/titleTV">

        <RadioButton
            android:id="@+id/readingRB"
            android:layout_width="93dp"
            android:layout_height="30dp"
            android:background="@drawable/state_check_border_round_blue_grey1"
            android:button="@null"
            android:checked="true"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/reading"
            android:textColor="@drawable/state_checked_text_white_grey1"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/readCompleteRB"
            android:layout_width="94dp"
            android:layout_height="30dp"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/state_check_border_round_blue_grey1"
            android:button="@null"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/read_complete"
            android:textColor="@drawable/state_checked_text_white_grey1"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/wantToReadRB"
            android:layout_width="93dp"
            android:layout_height="30dp"
            android:background="@drawable/state_check_border_round_blue_grey1"
            android:button="@null"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/want_to_read"
            android:textColor="@drawable/state_checked_text_white_grey1"
            android:textSize="12sp" />

    </RadioGroup>

    <Button
        android:id="@+id/addBtn"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="27dp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/add_book"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:backgroundTint="@color/grey4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readTypeRG" />

</androidx.constraintlayout.widget.ConstraintLayout>