<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.book_profile.EmailAuthenticationActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/email_auth_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/email_auth_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/email_authentication"
                android:textColor="@color/main_blue"
                android:textSize="21.6dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_authenticate_complete_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="25.2dp"
                android:text="@string/complete"
                android:textColor="@color/main_blue"
                android:textSize="16.8dp"
                android:textStyle="bold" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:background="@drawable/layout_gradation">

        <EditText
            android:id="@+id/email_et"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="25.2dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/signin_et"
            android:enabled="false"
            android:hint="@string/msg_input_email"
            android:maxLines="1"
            android:paddingHorizontal="10.8dp"
            android:textColorHint="@color/grey12"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/send_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <android.widget.Button
            android:id="@+id/send_btn"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_email_authentication_send_btn"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/email_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email_et"
            app:layout_constraintTop_toTopOf="@+id/email_et" />

        <android.widget.Button
            android:id="@+id/resend_btn"
            android:layout_width="70dp"
            android:layout_height="0dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_email_authentication_resend_btn"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/resend"
            android:textColor="@color/light_red"
            android:textSize="16dp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/email_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/email_et"
            app:layout_constraintTop_toTopOf="@+id/email_et" />

        <EditText
            android:id="@+id/code_et"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="25.2dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/signin_et"
            android:hint="@string/msg_input_code"
            android:inputType="number"
            android:maxLines="1"
            android:paddingHorizontal="10.8dp"
            android:textColorHint="@color/grey12"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_et" />

        <TextView
            android:id="@+id/code_alert_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4.8dp"
            android:text="@string/err_wrong_code"
            android:textColor="@color/light_red"
            android:textSize="12dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_et"
            app:layout_constraintVertical_bias="0.41" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>