<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_fragment"
    android:paddingTop="13dp"
    android:paddingBottom="10dp"
    tools:context=".view.dialog.RemoveBookDialogFragment">

    <TextView
        android:id="@+id/delete_book_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_delete_book"
        android:textColor="@color/main_blue"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/delete_all_memo_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/delete_all_memo_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/msg_memo_list_all_delete"
        android:textColor="@color/main_blue"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/line_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_book_tv" />

    <View
        android:id="@+id/line_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="14dp"
        android:layout_marginTop="21dp"
        android:background="@color/grey12"
        app:layout_constraintBottom_toTopOf="@+id/cancel_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_all_memo_tv" />

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/cancel"
        android:textColor="@color/grey12"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line_view" />

    <TextView
        android:id="@+id/delete_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@color/light_red"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="@+id/cancel_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_tv"
        app:layout_constraintTop_toTopOf="@+id/cancel_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>